# 2D_Football

./: README  README.md  main.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/: modules.rst
package/: pyproject.toml
package/src/football_package.egg-info/: PKG-INFO
src/docs/: conf.py  index.rst
src/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
src/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/docs/_build/html/_sources/: modules.rst.txt
src/main_package_shervinmoh/: main.py
src/modules/: main.py
