[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football_package"
version = "0.0.1"
authors = [
  { name="ShervinMoh", email="shervinmohammadifar@outlook.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"